--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <label for="ghana">Ghana</label>
 
 
-        <button>Submit Answers</button>
+        <button>Submit</button>
     </form>
 
 
